feat(git): correct get branch name

--- a/test/post-samples/markdown-example-2.mdx
+++ b/test/post-samples/markdown-example-2.mdx
@@ -1,6 +1,6 @@
 ---
 title: Finding the Meaning of Life
-published: true
+published: false
 description: >-
     Discover the profound question of life's purpose with the `life-meaning-finder` Node.js library. 
     Explore advanced algorithms and philosophical insights to uncover a unique and personalized understanding of existence.
