feat(*): adjust hosting data to be mapped to a common format

--- a/test/post-samples/markdown-example-2.mdx
+++ b/test/post-samples/markdown-example-2.mdx
@@ -4,7 +4,7 @@ published: false
 description: Discover the profound question of life's purpose with the `life-meaning-finder` Node.js library. Explore advanced algorithms and philosophical insights to uncover a unique and personalized understanding of existence.
 tags: [philosophy, life, meaning, Node.js, library]
 cover_image: 'https://unsplash.com/pt-br/fotografias/pessoa-contemplando-o-significado-da-vida'
-published_at: null
+published_devTo_at: null
 devTo: false
 ---
 
